cmake_minimum_required(VERSION 3.28)
project(C++.Concurrency.In.Action.2)

set(CMAKE_CXX_STANDARD 17)


add_executable(2.3 src/2.3.cpp)
add_executable(2.2 src/2.2.cpp)
add_executable(2.1 src/2.1.cpp)
add_executable(1.1 src/1.1.cpp)

add_executable(2.1.1_1 CPlusPlus_Multithreading_Examples/2.1.1_1.cpp)
add_executable(2.1.1_2 CPlusPlus_Multithreading_Examples/2.1.1_2.cpp)
add_executable(2.1.3_1 CPlusPlus_Multithreading_Examples/2.1.3_1.cpp)
add_executable(2.1.3_2 CPlusPlus_Multithreading_Examples/2.1.3_2.cpp)
add_executable(2.1.3_3 CPlusPlus_Multithreading_Examples/2.1.3_3.cpp)
add_executable(2.2_1 CPlusPlus_Multithreading_Examples/2.2_1.cpp)

